# kenya-lend-intelligence

./: README.md  STRUCTURE.md  STRUCTURE.txt  render.yaml
.github/workflows/: ci-cd.yml
backend/: .env  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_migration.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/api/: __init__.py  auth.py  churn.py  credit.py  customers.py  datasets.py  loans.py  retention.py  statements.py
backend/app/connectors/: __init__.py  base_connector.py  external_dataset_connector.py  government_data_connector.py  kaggle_connector.py  macroeconomic_connector.py  world_bank_connector.py
backend/app/core/: __init__.py  audit.py  exceptions.py  logging_config.py  security.py
backend/app/models/: activity.py  customer.py  loan.py  prediction.py  retention.py  segment.py  transaction.py  user.py
backend/app/repositories/: __init__.py  activity_repository.py  base_repository.py  customer_repository.py  loan_repository.py  prediction_repository.py  transaction_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py  churn.py  credit.py  customer.py  loan.py  statement.py
backend/app/services/: __init__.py  auth_service.py  churn_service.py  credit_service.py  customer_service.py  feature_engineering.py  loan_service.py  retention_service.py  segmentation_service.py  statement_service.py
backend/app/services/ml/: __init__.py  base_model.py  churn_model.py  credit_model.py  default_model.py  explainability.py  model_registry.py  model_trainer.py
backend/app/utils/: __init__.py  date_utils.py  file_utils.py  validators.py
backend/ml/: __init__.py
backend/ml/inference/: __init__.py  predict.py
backend/ml/training/: __init__.py  train_models.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_churn.py  test_customers.py  test_loans.py
