[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kenya-lend-intelligence"
version = "0.1.0"
description = "AI-Powered Customer Intelligence, Churn Prediction, and Loan Decisioning Platform for Kenyan Digital Lenders"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Data Science Team", email = "team@kenyalend.co.ke"}
]
keywords = ["fintech", "credit-scoring", "churn-prediction", "machine-learning", "kenya", "digital-lending"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
]

[project.dependencies]
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
httpx = "^0.26.0"
supabase = "^2.3.0"
pandas = "^2.1.4"
numpy = "^1.26.3"
scikit-learn = "^1.3.2"
xgboost = "^2.0.3"
lightgbm = "^4.2.0"
catboost = "^1.2.2"
shap = "^0.44.0"
optuna = "^3.5.0"
imbalanced-learn = "^0.11.0"
polars = "^0.20.5"
openpyxl = "^3.1.2"
pypdf2 = "^3.0.1"
python-magic = "^0.4.27"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["app"]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=app --cov-report=term-missing"